--- a/ImpactMap/Views/Home/Index.cshtml
+++ b/ImpactMap/Views/Home/Index.cshtml
@@ -3,29 +3,37 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>IMPACTMAP</h1>
+    <p class="lead">WELCAME TO OUR PROJECT ;)</p>
 </div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
+<div id="register" class="alert-danger" onclick="getRegister()">
+    Register
 </div>
+<div id="login" class="alert-danger" onclick="getLogin()">
+    Login
+</div>
+
+<div id="resultDiv"></div>
+
+<script>
+    function getRegister() {
+        $.ajax({
+            url: "/account/register/",
+            type: 'GET',
+            success: function(result) {
+                $("#resultDiv").html(result);
+            }
+        });
+    }
+
+    function getLogin() {
+        $.ajax({
+            url: "/account/login/",
+            type: 'GET',
+            success: function (result) {
+                $("#resultDiv").html(result);
+            }
+        });
+    }
+</script>
