--- a/ImpactMap/Views/Entities/Details.cshtml
+++ b/ImpactMap/Views/Entities/Details.cshtml
@@ -59,6 +59,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.zip)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.zip)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.lat)
         </dt>
 
