--- a/ImpactMap/Views/Investments/Delete.cshtml
+++ b/ImpactMap/Views/Investments/Delete.cshtml
@@ -20,35 +20,19 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.entityFrom)
+            @Html.DisplayNameFor(model => model.entityFrom_ID)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.entityFrom)
+            @Html.DisplayFor(model => model.entityFrom_ID)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.entityTo)
+            @Html.DisplayNameFor(model => model.entityTo_ID)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.entityTo)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.projectFrom)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.projectFrom)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.projectTo)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.projectTo)
+            @Html.DisplayFor(model => model.entityTo_ID)
         </dd>
 
         <dt>
@@ -73,6 +57,22 @@
 
         <dd>
             @Html.DisplayFor(model => model.volunteerHours)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.projectFrom_ID)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.projectFrom_ID)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.projectTo_ID)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.projectTo_ID)
         </dd>
 
     </dl>
