--- a/ImpactMap/Views/Reports/Details.cshtml
+++ b/ImpactMap/Views/Reports/Details.cshtml
@@ -11,11 +11,11 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.projectID)
+            @Html.DisplayNameFor(model => model.project_ID)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.projectID)
+            @Html.DisplayFor(model => model.project_ID)
         </dd>
 
         <dt>
@@ -32,6 +32,14 @@
 
         <dd>
             @Html.DisplayFor(model => model.reportText)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.dueDate)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.dueDate)
         </dd>
 
     </dl>
