--- a/ImpactMap/Views/Users/Delete.cshtml
+++ b/ImpactMap/Views/Users/Delete.cshtml
@@ -12,11 +12,19 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.userGuid)
+            @Html.DisplayNameFor(model => model.userModelGuid)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.userGuid)
+            @Html.DisplayFor(model => model.userModelGuid)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.userModelName)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.userModelName)
         </dd>
 
     </dl>
