--- a/ImpactMap/Views/Entities/Delete.cshtml
+++ b/ImpactMap/Views/Entities/Delete.cshtml
@@ -60,6 +60,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.zip)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.zip)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.lat)
         </dt>
 
