--- a/ImpactMap/Views/Entities/Index.cshtml
+++ b/ImpactMap/Views/Entities/Index.cshtml
@@ -30,6 +30,9 @@
             @Html.DisplayNameFor(model => model.state)
         </th>
         <th>
+            @Html.DisplayNameFor(model => model.zip)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.lat)
         </th>
         <th>
@@ -57,6 +60,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.state)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.zip)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.lat)
