--- a/ImpactMap/Views/Reports/Delete.cshtml
+++ b/ImpactMap/Views/Reports/Delete.cshtml
@@ -12,11 +12,11 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.projectID)
+            @Html.DisplayNameFor(model => model.project_ID)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.projectID)
+            @Html.DisplayFor(model => model.project_ID)
         </dd>
 
         <dt>
@@ -33,6 +33,14 @@
 
         <dd>
             @Html.DisplayFor(model => model.reportText)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.dueDate)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.dueDate)
         </dd>
 
     </dl>
