--- a/ImpactMap/Views/Investments/Create.cshtml
+++ b/ImpactMap/Views/Investments/Create.cshtml
@@ -80,10 +80,15 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Investment.projectTo_ID, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Investment.projectTo, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Investment.projectTo_ID, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Investment.projectTo_ID, "", new { @class = "text-danger" })
+                <select name="projectTo_ID">
+                    @foreach (var project in Model.Projects)
+                {
+                        <option value=@project.ID>@project.name</option>
+
+                    }
+                </select>
             </div>
         </div>
 
