--- a/ImpactMap/Views/Investments/Create.cshtml
+++ b/ImpactMap/Views/Investments/Create.cshtml
@@ -7,10 +7,10 @@
 
 <h2>Create</h2>
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Investment</h4>
         <hr />
@@ -26,8 +26,12 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Investment.entityFrom_ID, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Investment.entityFrom_ID, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Investment.entityFrom_ID, "", new { @class = "text-danger" })
+                <select name="entityFrom_ID">
+                    @foreach (var entity in Model.Entities)
+                    {
+                        <option value="@entity.ID">@entity.name</option>
+                    }
+                </select>
             </div>
         </div>
 
@@ -36,9 +40,8 @@
             <div class="col-md-10">
                 <select name="entityTo_ID">
                     @foreach (var entity in Model.Entities)
-                {
+                    {
                         <option value=@entity.ID>@entity.name</option>
-
                     }
                 </select>
 
@@ -84,9 +87,8 @@
             <div class="col-md-10">
                 <select name="projectTo_ID">
                     @foreach (var project in Model.Projects)
-                {
+                    {
                         <option value=@project.ID>@project.name</option>
-
                     }
                 </select>
             </div>
