--- a/ImpactMap/Views/Projects/Create.cshtml
+++ b/ImpactMap/Views/Projects/Create.cshtml
@@ -15,7 +15,7 @@
         <hr />
         
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
+        @*<div class="form-group">
             <select name="entity_ID">
                 @foreach (var entity in Model.Entities)
                 {
@@ -23,7 +23,7 @@
           
                 }
             </select>
-        </div>
+        </div>*@
         <div class="form-group">
             @Html.LabelFor(model => model.Project.name, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
