--- a/ImpactMap/Views/Investments/Create.cshtml
+++ b/ImpactMap/Views/Investments/Create.cshtml
@@ -38,6 +38,19 @@
         </div>
 
         <div class="form-group">
+            @Html.LabelFor(model => model.Investment.categories, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                <select name="ID">
+                    @foreach (var category in Model.Projects)
+                    {
+                        <option value=@category.ID>@category.name</option>
+                    }
+                </select>
+            </div>
+        </div>
+
+
+        <div class="form-group">
             @Html.LabelFor(model => model.Investment.date, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Investment.date, new { htmlAttributes = new { @type = "date", @class = "form-control" } })
@@ -89,6 +102,7 @@
                 </select>
             </div>
         </div>
+
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
