Oops I accidentally broke some stuff but it's fixed now lol ;)

--- a/ImpactMap/Views/Investments/Create.cshtml
+++ b/ImpactMap/Views/Investments/Create.cshtml
@@ -27,7 +27,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Investment.entityTo, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                <select name="entityTo_ID" id="ProjectToDropdown">
+                <select name="entityTo_ID" id="recipientSelect">
                     @foreach (var entity in Model.Entities)
                     {
                         <option value=@entity.ID>@entity.name</option>
@@ -180,7 +180,7 @@
         //at this moment getting an error 500 internal server error
         function updateProjectsOut() {
             $.ajax({
-                url: '/Entities/GetProjectsOut/' + $('#EntityToDropdown').val() + '/',
+                url: '/Entities/GetProjectsOut/' + $('#recipientSelect').val() + '/',
                 type: 'get',
                 success: function (data) {
                     var html = '';
@@ -194,7 +194,7 @@
             });
         };
 
-        $('#EntityToDropdown').change(updateProjectsOut);
+        $('#recipientSelect').change(updateProjectsOut);
 
         function initialize() {
             load_categories();
