--- a/ImpactMap/Views/Shared/_Layout.cshtml
+++ b/ImpactMap/Views/Shared/_Layout.cshtml
@@ -16,6 +16,20 @@
         .hideFormField{
             display:none;
         }
+
+        
+     /* Always set the map height explicitly to define the size of the div
+    * element that contains the map. */
+     #map {
+         height: 100vh;
+     }
+     /* Optional: Makes the sample page fill the window. */
+     html, body {
+         height: 100%;
+         margin: 0;
+         padding: 0;
+     }
+
     </style>
 
 </head>
